# fast-arb

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
config/: config.yaml
src/: __init__.py
src/arbitrage/: __init__.py  arbitrage_engine.py  funding_monitor.py  opportunity_detector.py  trade_executor.py
src/config/: config_manager.py
src/exchanges/: __init__.py  base_exchange.py  hyperliquid_client.py  reya_client.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py  test_arbitrage.py  test_config.py  test_helpers.py
