[tool.poetry]
name = "fast-arb"
version = "0.1.0"
description = "Funding Rate Arbitrage MVP"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies
rich = "^13.7.1"
typer = "^0.12.3"
loguru = "^0.7.2"

# Configuration
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pyyaml = "^6.0.1"

# Async support
aiohttp = "^3.9.5"
aiofiles = "^23.2.0"
websockets = "^12.0"

# Logging
structlog = "^24.1.0"

# Environment
python-dotenv = "^1.0.1"

# Math
numpy = "^1.26.4"
pandas = "^2.2.2"

# Web3/Blockchain
web3 = "^6.20.2"
eth-account = "^0.11.0"
eth-abi = "^5.1.0"
typing-extensions = "^4.12.2"
websocket-client = "^1.8.0"

# Reya SDK modules as local dependencies
reya-actions = {path = "./reya-python-sdk/reya_actions", develop = true}
reya-data-feed = {path = "./reya-python-sdk/reya_data_feed", develop = true}

[tool.poetry.group.dev.dependencies]
# Development and testing
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.1"
black = ">=23.9.1"
flake8 = ">=6.1.0"

[tool.poetry.scripts]
fast-arb = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"